Added summarize endpoint
